--- a/client/style.css
+++ b/client/style.css
@@ -1,9 +1,22 @@
+html {
+height: 100%;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
 
 #app {
     display: flex;
+    flex-direction: column;
+    height: 100%;
+    box-sizing: border-box;
+    padding: 0.5rem;
+    justify-content: space-between;
 }
 
 .board {
