localStorage ok, share button

--- a/client/style.css
+++ b/client/style.css
@@ -158,3 +158,17 @@ header .game-mode {
 .simple-keyboard {
     background-color: transparent !important;
 }
+
+.btn {
+    border-radius: 0;
+    background-color: #d3d6da;
+    color: #000;
+    font-size: 1.2rem;
+    font-weight: 600;
+    padding: 0.5rem 1rem;
+    border: 0;
+    cursor: pointer;
+    display: block;
+    width: 100%;
+    margin-bottom: 1rem;
+}
