--- a/client/style.css
+++ b/client/style.css
@@ -172,3 +172,11 @@ header .game-mode {
     width: 100%;
     margin-bottom: 1rem;
 }
+
+.countdown {
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #000;
+    text-align: center;
+    margin-bottom: 1rem;
+}
